add back button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div id="username"></div>
         <div id="attempt"></div>
         
+        <button id="back">Повернутись назад</button>
         <button id="play">Грати</button><br>
         <button id="again">Спробувати ще раз</button>
         <button id="new-game">Розпочати нову гру</button>
